--- a/ReceiptClient/ReceiptClient.csproj
+++ b/ReceiptClient/ReceiptClient.csproj
@@ -237,6 +237,12 @@
     <Compile Include="Models\ReceiptInfo.cs" />
     <Compile Include="Models\UserAuth.cs" />
     <Compile Include="Models\UserPreferenceConfig.cs" />
+    <Compile Include="ReceiptDetail.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReceiptDetail.Designer.cs">
+      <DependentUpon>ReceiptDetail.cs</DependentUpon>
+    </Compile>
     <Compile Include="Shared\GridColorManager.cs" />
     <Compile Include="Shared\PatternRepo.cs" />
     <Compile Include="Shared\ReceiptInfoTestData.cs" />
@@ -316,6 +322,9 @@
     <Compile Include="UserControls\SimpleProgressForm.Designer.cs">
       <DependentUpon>SimpleProgressForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ReceiptDetail.resx">
+      <DependentUpon>ReceiptDetail.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserControls\SimpleProgressForm.resx">
       <DependentUpon>SimpleProgressForm.cs</DependentUpon>
     </EmbeddedResource>
